@@ -1,3 +1,7 @@
+1764.	[bug]		dns_zone_replacedb failed to emit a error message
+			if there was no SOA record in the replacment db.
+			[RT #13016]
+
 1753.	[bug]		Don't serve a slave zone which has no NS records.
 			[RT #12894]
 
